--- a/calculator-main/templates/lights.html
+++ b/calculator-main/templates/lights.html
@@ -38,7 +38,7 @@
           <span>8 и более</span></a>
       </li>
       <li class="list__item">
-        <a href="{{ size + '/15' }}">
+        <a href="{{ size + '/eco' }}">
           <img class="item__img" src="/static/img/light.svg" alt="light" style="filter: hue-rotate(90deg);">
           <span>Наша экологичная сборка</span>
         </a>
